[gd_scene load_steps=2 format=3 uid="uid://djnk8i1tduvyc"]

[ext_resource type="Script" uid="uid://b8jeecrsjsrkc" path="res://scripts/ui/object_inventory.gd" id="1_bsqsq"]

[node name="ObjectInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 39.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsqsq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 513.0

[node name="ObjectPanel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ObjectPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="HBoxContainer/ObjectPanel/VBoxContainer"]
layout_mode = 2
text = "Object Inventory"

[node name="SlotsGrid" type="GridContainer" parent="HBoxContainer/ObjectPanel/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="CloseButton" type="Button" parent="HBoxContainer/ObjectPanel/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="PlayerPanel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PlayerPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
text = "Your Inventory"

[node name="SlotsGrid" type="GridContainer" parent="HBoxContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
columns = 6
